--- a/frontend/src/metabase/css/card.css
+++ b/frontend/src/metabase/css/card.css
@@ -131,7 +131,7 @@
 }
 .DashboardGrid .DashCard:nth-child(5):after {
     content: "";
-    background-image: url(../../app/assets/img/FedEx_Express.svg/1280px-FedEx_Express.svg.png);
+    background-image: url(../../app/assets/img/1280px-FedEx_Express.svg.png);
     width: 130px;
     position: absolute;
     background-size: 120px;
