--- a/frontend/src/metabase/css/card.css
+++ b/frontend/src/metabase/css/card.css
@@ -31,7 +31,6 @@
 }
 /*-- Added CSS For Boxes Color Customization Start--*/
 /**** Color Combinattion 1 *****/
-
 .DashboardGrid .DashCard:nth-child(2) .Card {
     background-color: #deffdd;
     border-color: #cbfbc8;
@@ -113,58 +112,59 @@
     color: #47a6ef;
 }
 /**** Color Combinattion 1 *****/
-
 /*-- Added CSS For Boxes Color Customization Over--*/
-
 .DashboardGrid .DashCard:nth-child(1):after {
     content: "";
     background-image: url(../../app/assets/img/1280px-FedEx_Ground.svg.png);
-    width: 130px;
+    width: 231px;
     position: absolute;
-    background-size: 120px;
-    height: 51px;
+    background-size: 250px;
+    height: 110px;
     background-repeat: no-repeat;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    top: 70px;
-    left: -130px;
+    top: 190px;
+    left: -200px;
     opacity: 0.5;
 }
 .DashboardGrid .DashCard:nth-child(5):after {
     content: "";
     background-image: url(../../app/assets/img/1280px-FedEx_Express.svg.png);
-    width: 130px;
+    width: 250px;
     position: absolute;
-    background-size: 120px;
-    height: 51px;
+    background-size: 250px;
+    height: 118px;
     background-repeat: no-repeat;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    top: 70px;
-    left: -130px;
+    top: 180px;
+    left: -210px;
     opacity: 0.5;
 }
 .DashboardGrid .DashCard:nth-child(9):after {
     content: "";
     background-image: url(../../app/assets/img/usps_2.png);
-    width: 90px;
+    width: 200px;
     position: absolute;
-    background-size: 90px;
-    height: 76px;
+    background-size: 200px;
+    height: 167px;
     background-repeat: no-repeat;
-    top: 54px;
+    top: 144px;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    left: -118px;
+    left: -198px;
     opacity: 0.5;
 }
 .DashboardGrid .DashCard:nth-child(13):after {
     content: "";
     background-image: url(../../app/assets/img/MS_Logo_2.png);
-    height: 79px;
-    width: 70px;
+    height: 195px;
+    width: 170px;
     position: absolute;
-    background-size: 65px;
+    background-size: 155px;
     background-repeat: no-repeat;
-    left: -110px;
-    top: 50px;
+    left: -200px;
+    top: 150px;
     opacity: 0.5;
 }
 /*-- Added CSS For Boxes Color Customization Over--*/
